testdata/baselines/reference/submodule/conformance/nullishCoalescingOperatorInParameterBindingPattern(target=es2015).errors.txt
nullishCoalescingOperatorInParameterBindingPattern.ts(3,6): error TS2537: Type '{}' has no matching index signature for type 'string'.


==== nullishCoalescingOperatorInParameterBindingPattern.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): string | undefined => undefined;
    (({ [a() ?? "d"]: c = "" }) => {})();
         ~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.